# Sgnow

./: .gitignore  Cargo.toml  CasualPlayer.sln  README.md  Sgnow.sln  package-lock.json  package.json
CasualPlayer/: CasualPlayer.vcxproj  CasualPlayer.vcxproj.filters  audio.cpp  audio.h  main.cpp
Sgnow/: Audio.cpp  Audio.h  Colors.h  FileReader.cpp  FileReader.h  LTexture.cpp  LTexture.h  Sgnow.vcxproj  Sgnow.vcxproj.filters  main.cpp
lib/: index.js
native/: Cargo.toml  build.rs
native/src/: lib.rs
src/: main.js  main.rs  window.rs
src/static/: index.html
src/www/: index.html  index.js  stylesheet.css
