[package]
name = "sgnow"
version = "0.1.0"
authors = ["pinnouse <cupofpho@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "sgnow"
crate-type = ["dylib"]

[build-dependencies]
neon-build = { git = "https://github.com/kjvalencik/neon", branch = "node12" }
cc = "1.0"

[dependencies]
neon = { git = "https://github.com/kjvalencik/neon", branch = "node12" }
rodio = "0.9.0"
dirs = "2.0.2"